// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormCheckbox Optional Field 1`] = `
<section
  className="flex"
>
  <input
    className="transform translate-y-1 "
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div>
    <label
      className="leading-5"
      htmlFor="areConditionsAccepted"
    >
      Do you accept?
      <span
        className="text-gray-500 float-right text-sm ml-2 transform translate-y-1"
      >
        (Optional)
      </span>
    </label>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox With Error 1`] = `
<section
  className="flex"
>
  <input
    className="transform translate-y-1 error"
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div>
    <label
      className="leading-5"
      htmlFor="areConditionsAccepted"
    >
      Ich akzeptiere die
       
      <a
        href="https://www.technologiestiftung-berlin.de/de/datenschutz/"
      >
        Nutzungsbedingungen
      </a>
      .
    </label>
    <p
      className="text-secondary text-sm"
    >
      Your checkbox has to be beautiful
    </p>
    <p
      className="text-secondary text-sm"
    >
      Your checkbox is not checked
    </p>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox With Label 1`] = `
<section
  className="flex"
>
  <input
    className="transform translate-y-1 "
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div>
    <label
      className="leading-5"
      htmlFor="areConditionsAccepted"
    >
      Do you accept?
    </label>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox Without Label 1`] = `
<section
  className="flex"
>
  <input
    className="transform translate-y-1 "
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
</section>
`;
